Bug 214050 Start to localize some of the more common user-visible error messages in caps. r+sr=bzbarsky@mit.edu